Added endSession API in Authorization Controller
